read and display json